--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
-body {
-
+h3{
+ color: brown; 
+text-decoration: yellow overline underline 6px dashed;
+  word-spacing: 10px;
+  text-shadow: 2px 2px 5px brown;
 }
+
+body {
+  background-color: wheat;
+}
+
+img:hover {
+  width: 700px;
+  border: dashed yellow 8px;
+ 
+  
+}
+
