--- a/style.css
+++ b/style.css
@@ -16,3 +16,33 @@ img:hover {
   
 }
 
+nav {
+  list-style-type: none;
+  background-color: #333;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+nav {
+  list-style-type: none;
+  background-color: #333;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+li a {
+  text-decoration: none;
+  color: white;
+  display: block;
+  float: left;
+  padding: 15px 50px;
+}
+
+li a:hover {
+  background-color: gray;
+  color: black;
+}
